# VisionCore-Deploy

./: .gitignore  LICENSE  config.json  download.py  install-deploy.sh  install-dev.sh  provision.sh  pyproject.toml  readme.md  test.py
.github/workflows/: build-image.yml
Config/: config.json
Image/: build-image.sh  first-boot.service  first-boot.sh  note.md  provision.sh
VisionCore/: VisionCore.py  deploy-requirements.txt  dev-requirements.txt  example_config.json  example_usage.py  todo.txt
VisionCore/boot/: boot.py  install.py  setup_service.py  watchdog.py
VisionCore/config/: AutoOpt.py  VisionCoreConfig.py
VisionCore/core/: config.json  game_loop.py
VisionCore/examples/: example_config.json  example_custom_tracker.py  example_usage.py
VisionCore/plugins/: _loader.py
VisionCore/plugins/trackers/: ObjectTracker.py  PathPlanner.py  example_tracker.py
VisionCore/plugins/utilities/: HealthReporter.py  NetworkHandler.py  VideoRecorder.py  example_utility.py
VisionCore/plugins/vision/: ObjectDetectionCamera.py
VisionCore/trackers/: CustomDBScan.py  FuelTracker.py  PathPlanner.py
VisionCore/utilities/: MultipleCameraHandler.py  NetworkTableHandler.py  VideoRecorder.py
VisionCore/utilities/laptop/: AllInOneConvert.py
VisionCore/validations/: model_cli.py  model_validator.py  unit_tests.py  validate_system.py
VisionCore/vision/: Camera.py  Fuel.py  ModelInspector.py  ObjectDetectionCamera.py  genericYolo.py
VisionCore/web/: CameraApp.py  Metrics.py  healthReporter.py
yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
